Fix footer contact icons on Safari

--- a/web/app/themes/tgp-theme/assets/styles/layouts/_footer.scss
+++ b/web/app/themes/tgp-theme/assets/styles/layouts/_footer.scss
@@ -74,7 +74,7 @@ footer {
             }
 
             svg {
-                width: auto;
+                width: 16px;
                 height: 16px;
                 margin-top: 1px;
                 vertical-align: middle;
